[package]
name = "ss_to_json_outline"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
urlencoding = "2.1.3"
regex = "1.10.5"
